# SonoffLAN-to-mqtt

./: .gitignore  ORIGINAL_ARCHITECTURE.md  STANDALONE.md  config.example.yaml  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
scripts/: build-bundle.sh  deploy.sh
standalone/: __init__.py  __main__.py  _core.py  auth.py  cli.py  config.py  discovery.py  mqtt.py  registry.py  runner.py  simulate.py
standalone/ewelink/: VENDORED.md
systemd/: sonoff-collector.service
